--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "me.champeau.jmh" version "0.7.2"
 }
 
 group = 'de.edu.lmu'
@@ -9,9 +10,10 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
-    implementation files('libs/ssj-3.3.1.jar')
-    implementation 'ca.umontreal.iro.simul:ssj:3.3.0'
+    /*implementation files('libs/ssj-3.3.1.jar')*/
+    testImplementation 'ca.umontreal.iro.simul:ssj:3.3.0'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
