partically done adapter java cannot load the lib maybe i need to use a release build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
+
 [package]
-name = "rust"
+name = "pcg_test_crush"
 version = "0.1.0"
 edition = "2021"
 
+
 [lib]
 crate-type = ["cdylib"]
+path = "./src/crush/rust/lib.rs"
 
 [dependencies]
 testu01 = { git = "https://github.com/dzamlo/rust-testu01.git" }
