Updated Main.java to get int outputs. Updated increment and multiplier to match C code.

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 dependencies {
     implementation files('libs/ssj-3.3.1.jar')
     implementation 'ca.umontreal.iro.simul:ssj:3.3.0'
