--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ configurations {
 dependencies {
     // Add dependencies for crush tests if any
     crushImplementation 'junit:junit:4.13.2'
+
+    //crushTest need access to main
+    crushImplementation sourceSets.main.output
+    crushRuntimeOnly sourceSets.main.runtimeClasspath
 }
 
 task crushTest(type: Test) {
@@ -54,7 +58,7 @@ task crushTest(type: Test) {
 
 
     // Set the JVM system property to point to the native library directory
-    systemProperty 'java.library.path', file('target/debug')
+    //systemProperty 'java.library.path', file('target/release')
     jvmArgs = ['--enable-preview', '--enable-native-access=ALL-UNNAMED']
 }
 
@@ -63,6 +67,9 @@ check.dependsOn crushTest
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
 }
+
+
+
 
 /*tasks.register('runLinearComp', JavaExec) {
     group = 'application'
